# isengard

./: .gitignore  README
asm/hello/: CMakeLists.txt  Makefile  build.ninja  hello_att_x64.s  hello_x86.s
asm/hello/baremetal/: README  biosfuncs.s  build.sh  hello.s
asm/hello/i386/: hello.s
asm/hello/x86_64/: hello.s
c/apps/: CMakeLists.txt  acceptanddisplay.c  angle.c  angle.h  ansi_colors.h  ansi_colors_test.c  arrays_n_pointers.c  arraysize.c  arraysize.h  arraysize_test.c  ascii.c  ascii_table.c  atm.c  backlog.c  base.h  base64.c  base64.h  base_test.c  bhaskara.c  bin.c  bit.c  bitmask.c  bitops.h  break_even_test.c  build.ninja  buildpath.c  buildtime.c  builtin_expect_demo.c  cJSON.h  cansse2.c  ccustomdatatypes.c  cdecl.h  celtofah.c  cities.csv  ckeywords.c  configdir.c  countlines.c  cprimitivedatatypes.c  cpu.c  cpu.h  (+140 more)
c/apps/Tribe/: README.md  Tribe.dsp  Tribe.dsw  Tribe.sln  Tribe.vcproj  db.c  main.c  resource.h  tribe.manifest  ui.rc
c/apps/WunderPeople/: WunderPeople.dsp  WunderPeople.dsw  WunderPeople.sln  WunderPeople.vcproj  alpm_list.c  db.c  db.h  main.c  resource.h  ui.rc
c/apps/accessory/clock/: CMakeLists.txt  clock.c
c/apps/allepo/: buffer.c  buffer.h  csv_helper.h  curl_helper.c  curl_helper.h  ticks.c
c/apps/allepo/schema/: alter-table-log.txt
c/apps/bookmarks/: CMakeLists.txt  create_table.sh  insert.c  list.c  schema.mysql  setup_db.sh  setup_db.sql
c/apps/compiler/: CMakeLists.txt  ffileutils.c  ffileutils.h  lexer.c  lexer.h  main.c  token.h
c/apps/contacts/: CMakeLists.txt  db.c  ffileutils.c  showrec.c  strutils.c
c/apps/contacts/schema/: schema.mysql
c/apps/curlgtk/: curlgtk.c
c/apps/echo/: build.ninja  client.c  die.h  server.c  tcpcli01.c  tcpserv01.c  wraplib.h  wrapstdio.c  wrapunix.h  writen.c  writen.h
c/apps/echo_server/: build.ninja  client.c  readline.h  server.c  str_cli.c  str_cli.h  str_echo.c  str_echo.h  tcpcli01.c  tcpserv01.c  wrapsock.c  wrapsock.h  wrapstdio.h  writen.c  writen.h
c/apps/experiments/: CMakeLists.txt  README  add.c  db.c  db.h  ffileutils.c  ffileutils.h  insert.c  list.c  showrec.c  strutils.c  util.c  util.h
c/apps/experiments/schema/: schema.mysql
c/apps/experiments/scripts/: setup_mysql.sh
c/apps/getaddrinfo/: build.ninja  getaddrinfo.c
c/apps/gui/gtk/: CMakeLists.txt  clock.c  entry.c  install_deps.sh  listview.c  messagedialogs.c  timeframe.c  toolbar.c  ui.c  window_icon.c
c/apps/hello/: .gitignore  Makefile.am  README  autogen.sh  configure.ac
c/apps/hello/po/: POTFILES.in  hello.pot  pt.po
c/apps/hello/src/: Makefile.am  hello.c
c/apps/imap/: imap.c
c/apps/income/: CMakeLists.txt  csv_helper.c  csv_helper.h  csvimport.c  env.c  env.h  file.h  gethistdata.c  print_csv_stats.c  print_csv_ticks.c  stock.c  stock.h
c/apps/income/schema/: stocks.sql
c/apps/mailer/: CMakeLists.txt
c/apps/mailer/src/: CMakeLists.txt  compose.c  compose.h  main.c  password_dialog.c  password_dialog.h
c/apps/md5/: CMakeLists.txt  README  build.sh
c/apps/moneybin/: .moneybinrc  BPAN4.SA.csv  CMakeLists.txt  ComposicaoCapitalSocialDemonstracaoFinanceiraNegocios.xml  DEPS  DMMO3.SA.csv  INDICATORS.txt  OIBR3.SA.csv  OSCILLATOR-RSI.xlsx  OSCILLATOR-STOCHASTIC.xlsx  PETR4.SA.csv  REFERENCES  RSI-PROCEDURES.txt  arraysize.h  b3companies.c  b3company.c  b3company.h  b3nt.c  b3sectors.c  b3security.c  b3stocksymbols.c  b3symbols.c  b3types.c  b3types.h  backend_mysql.c  beta.c  beta.h  breakeven.c  buffer.c  buffer.h  calc.c  calcbeta.c  calcpivot.c  calcpp.c  calcrsi.c  calcsharpe.c  calcstoch.c  calcwilliamsr.c  config.c  config.h  (+104 more)
c/apps/moneybin/b3/: B3.md  B3_STOCK_SYMBOLS.txt  CLASSIFICACAO-SETORIAL.xlsx  ClassifSetorial_30-06-2020.xlsx  TITULOS_NEGOCIAVEIS.TXT  cvm_last_update.txt  inf_cadastral_cia_aberta.csv  meta_inf_cadastral_cia_aberta.txt
c/apps/moneybin/sets/: AG.csv  (+19 more)
c/apps/network/: CMakeLists.txt  attributes.h  build.ninja  die.c  die.h  dns_dname.c  dnsclient.c  fnet.c  fnet.h  fromdot.c  hostname.c  hostname.h  http.c  log.c  log.h  macros.h  myhostname.c  nameservers.c  res.c  selectserver.c  timec.c  timeclient.c  timeserver.c  udpclient.c  udpserver.c  unixclient.c  unixserver.c  util.c
c/apps/polymorphism/: CMakeLists.txt  animal.c  animal.h  duck.c
c/apps/sab/: CMakeLists.txt  README.md  schema.sql
c/apps/select/: build.ninja  select.c
c/apps/showip/: build.ninja  showip.c
c/apps/sizeck/: build.ninja  sizeck.c
c/apps/trade/: CMakeLists.txt  UNIP6.SA.csv  buffer.c  buffer.h  csv_helper.c  csvimport.c  curl_helper.c  db_mysql.c  env.c  env.h  file.c  file.h  gethistdata.c  stock.c  stock.h  ticks.c
c/apps/tribe/: CMakeLists.txt  README.md  config.h.cmake  config.h.cmake.in
c/apps/umgr/: CMakeLists.txt  build.ninja  schema.sql
c/apps/uzrm/: CMakeLists.txt  build.ninja  cmd_del.c  cmd_update.c  main.c  umc.c
c/common/: CMakeLists.txt  README  base.h  buffer.c  buffer_test.c  os_path.h  os_path_test.c  vector_test.c
c/examples/: CMakeLists.txt  README.md  arraysize_example.c  buffer_example.c  stringize_example.c  strlennull.c
c/examples/cli/: CMakeLists.txt  quiet.c  verbose.c  verbosity.c
c/examples/db/: CMakeLists.txt
c/examples/inheritance/: CMakeLists.txt
c/examples/lexer/: CMakeLists.txt  README.md  ffileutils.c  lexer.c  lexer.h  main.c
c/examples/polymorphism/: CMakeLists.txt  animal_test.c
c/libs/buffer/: BUILD  CMakeLists.txt  Makefile  README  TODO  buffer.c  buffer.h  buffer_test.c  build.sh  macros.h  run_all_unittests.c
c/libs/vector/: CMakeLists.txt  Makefile  build.sh  clean.sh  libvector.pc.in  run_all_unittests.c  unittests.c  vector.c  vector.h  vector_test.c
cpp/libs/base/: BUILD  CMakeLists.txt  arraysize.h  directory.h  file_util.cc  file_util_test.cc  path.cc  path_test.cc
learn/c/: CMakeLists.txt  addressofoperator.c  arrayheapdeclaration.c  arrayinitialization.c  arraynametopointer.c  arrays_n_pointers.c  arraystofunctions.c  complexpointersyntax.c  doublepointer.c  doublepointerparameter.c  indirectionoperator.c  pointers2.c  postfixincrementoperator.c  postfixoperator.c  subscriptoperator.c
(+1104 files in other folders)
