cmake_minimum_required(VERSION 2.6)
project(learn-c C)

add_executable(complexpointersyntax complexpointersyntax.c)
add_executable(arrays_n_pointers arrays_n_pointers.c)
add_executable(postfixincrementoperator postfixincrementoperator.c)
add_executable(goto1 goto1.c)
add_executable(goto2 goto2.c)
add_executable(addressofoperator addressofoperator.c)
add_executable(indirectionoperator indirectionoperator.c)
add_executable(doublepointer doublepointer.c)
add_executable(subscriptoperator subscriptoperator.c)
add_executable(arrayinitialization arrayinitialization.c)
add_executable(arraystofunctions arraystofunctions.c)
add_executable(arraynametopointer arraynametopointer.c)
